<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.xginko.VillagerOptimizer</groupId>
    <artifactId>VillagerOptimizer</artifactId>
    <version>1.5.0</version>
    <packaging>jar</packaging>

    <name>VillagerOptimizer</name>
    <description>Combat heavy villager lag by letting players optimize their trading halls.</description>
    <url>https://github.com/xGinko/VillagerOptimizer</url>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.tcoded.folialib</pattern>
                                    <shadedPattern>me.xginko.villageroptimizer.libs.folialib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.benmanes.caffeine</pattern>
                                    <shadedPattern>me.xginko.villageroptimizer.libs.caffeine</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>me.xginko.villageroptimizer.libs.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori</pattern>
                                    <shadedPattern>me.xginko.villageroptimizer.libs.kyori</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>configmaster-repo</id>
            <url>https://ci.pluginwiki.us/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>folialib-repo</id>
            <url>https://nexuslite.gcnt.net/repos/other/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Adventure API for easier cross-version compatibility -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.3.2</version>
        </dependency>
        <!-- Adventure MiniMessage for parsing fancy tags in lang files -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.16.0</version>
        </dependency>
        <!-- Adventure ComponentLogger for colorful logging -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-logger-slf4j</artifactId>
            <version>4.16.0</version>
        </dependency>
        <!-- Adventure plaintext serializer for reading unstyled content of components -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>4.16.0</version>
        </dependency>
        <!-- Bukkit bStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
        </dependency>
        <!-- Enhanced config.yml manager -->
        <dependency>
            <groupId>com.github.thatsmusic99</groupId>
            <artifactId>ConfigurationMaster-API</artifactId>
            <version>v2.0.0-rc.1</version>
        </dependency>
        <!-- Fast Caching (Needs to be 2.9.3 for java 8 support) -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.9.3</version>
        </dependency>
        <!-- Folia Support -->
        <dependency>
            <groupId>com.tcoded</groupId>
            <artifactId>FoliaLib</artifactId>
            <version>0.3.1</version>
        </dependency>
    </dependencies>
</project>
